--- a/index.css
+++ b/index.css
@@ -977,6 +977,8 @@ body .text:hover + .images {
 #commissions {
     display: none;
     overflow-y: scroll;
+    -ms-overflow-style: none;  /* Internet Explorer 10+ */
+    scrollbar-width: none;  /* Firefox */
 }
 
 .board-com {
