--- a/index.css
+++ b/index.css
@@ -152,7 +152,7 @@ header {
 
 .choices button {
     font-size: 1.2vw;
-    font-family: TorreFarfan;
+    font-family: Sneaky;
     line-height: 1.2vw;
     letter-spacing: -0.2px;
     padding-top: 5px;
