--- a/pages/CSS/romance-et-nostalgie.css
+++ b/pages/CSS/romance-et-nostalgie.css
@@ -275,6 +275,10 @@ section {
     to {opacity: 1;}
 }
 
+.container::-webkit-scrollbar {
+  display: none;
+}
+
 #container1 {
     display: flex;
     flex-direction: row;
