--- a/exhibitions/CSS/destination-unknown-23.css
+++ b/exhibitions/CSS/destination-unknown-23.css
@@ -268,6 +268,10 @@ section {
     background-color: transparent;
     overflow-y: hidden;
 }
+
+.container::-webkit-scrollbar {
+  display: none;
+}
   
 @keyframes fadeEffect {
     from {opacity: 0;}
